added some things

--- a/Java2/style.css
+++ b/Java2/style.css
@@ -3,6 +3,7 @@
 body {
     display: flex;
     justify-content: center;
+    background: #EEE;
 }
 
 section { 
@@ -29,6 +30,7 @@ display: flex;
 border-radius: 10px 10px 0px 0px;
 justify-content: center;
 flex-direction: column;
+background-color: white;
 }
 
 .section {
@@ -41,11 +43,15 @@ flex-direction: column;
 
 #textbox {
     display: flex;
-padding: 12px 100px 13px 14px;
+padding: 12px 100px 13px 44px;
 align-items: center;
 border-radius: 5px;
 background: #EBEFF2;
 border: 0;
+background-image: url(akar-icons_circle.png);
+background-repeat: no-repeat;
+background-position-y: 7px;
+  background-position-x: 10px;
 }
 
 .add {
@@ -99,5 +105,14 @@ li div {
 }
 
 .input-1 {
-  border-radius: 100%;
+
+  width: 24px;
+  height: 24px;
+  margin-left: 250px;
+  background-color: #FFF;
+  appearance: none;
+  border: solid #20EEB0;
+  content: '\2713';
+  cursor: pointer;
+  border-radius: 100%;  
 }
