added time, changed styles

--- a/Java2/style.css
+++ b/Java2/style.css
@@ -31,6 +31,17 @@ border-radius: 10px 10px 0px 0px;
 justify-content: center;
 flex-direction: column;
 background-color: white;
+position: relative;
+}
+
+#time {
+  position: absolute;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 48px;
+  font-weight: 400;
+  color: white;
+  top: 130px;
+  right: 48px;
 }
 
 .section {
@@ -104,7 +115,7 @@ li div {
   display: flex;
 }
 
-.input-1 {
+/* .input-1 {
 
   width: 24px;
   height: 24px;
@@ -115,4 +126,41 @@ li div {
   content: '\2713';
   cursor: pointer;
   border-radius: 100%;  
+} */
+
+
+input[type="checkbox"] {
+
+  width: 24px;
+  height: 24px;
+  margin-left: 250px;
+  background-color: #FFF;
+  appearance: none;
+  border: solid #20EEB0;
+  content: '\2713';
+  cursor: pointer;
+  border-radius: 100%;
+
 }
+
+
+input[type="checkbox"]:checked {
+   background-color:#20EEB0 ; 
+   align-items: center;
+   justify-content: center;
+   display: flex;
+
+ }
+
+
+
+
+
+input[type="checkbox"]::before {
+   content: '\2713'; 
+
+   color: #fff; 
+   position: absolute;
+   border-radius: 100%;
+   transition: transform 0.3s ease-in-out;
+ }
